work/yaml/jenkins_master_k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress-whitelist: "*.rdev.tech"
  name: jenkins
  labels:
    name: jenkins
