work/yaml/jenkins_master_k8s/jenkins-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    k8s-app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: jenkins
  template:
    metadata:
      labels:
        k8s-app: jenkins
    spec:
      containers:
        - name: jenkins
          image: 192.168.80.54:8081/library/jenkins/jenkins:v1.0.1_alpha
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: maven-repository
              mountPath: /opt/maven/repository
            - name: docker
              mountPath: /usr/bin/docker
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: cp-jar
              mountPath: /temp/jenkinscerts
          command:
              - /bin/sh
              - '-c'
              - cp /temp/jenkinscerts/* /usr/local/openjdk-8/jre/lib/security/ && /usr/local/bin/jenkins.sh
          ports:
            - containerPort: 8080
            - containerPort: 50000
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkinshomepvc
        - name: maven-repository
          persistentVolumeClaim:
            claimName: mavenrepopvc
        - name: docker
          hostPath:
            path: /usr/bin/docker
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: cp-jar
          emptyDir: {}
      serviceAccountName: jenkins-admin
